--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <!--main Image-->
   <div class="image-container">
-  <img class="main-picture" src="Pictures/Cropped version main picture.jpg">
+  <img class="main-picture" src="pictures/main.picture.cropped.jpg">
   </div>
 
   <!--Welcometext+button-->
