--- a/index.html
+++ b/index.html
@@ -8,71 +8,135 @@
   <!-- Google Fonts for "Great Vibes" -->
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Berkshire+Swash&family=Edu+AU+VIC+WA+NT+Pre:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-
-<!-- Local CSS -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Berkshire+Swash&family=Edu+AU+VIC+WA+NT+Pre:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.typekit.net/rod1uhx.css"> <!-- Ronja -->
+  <link rel="stylesheet" href="https://use.typekit.net/rod1uhx.css"> <!-- Wolf -->
+  
+  <!-- Local CSS -->
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://use.typekit.net/rod1uhx.css">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="dreamscape" href="dreamscape.html">
+  <link rel="about" href="about.html">
 </head>
 
 <body>
-  <!--circles-->
-  <div class="floating-circles"></div>
-
   <!--navigation bar top-->
   <div class="nav-bar">
-    <div class="logo-name"><p>RONJA</p></div>
+    <div class="logo-name"><p>Ronja Wolf</p></div>
     <div class="menu-icon" id="menu-toggle">☰</div>
   </div>
 
   <!--navigation bar below-->
-  <div class="nav-container">
-
-  <!--span Animation letters-->
+  <div class="nav-container" id="nav-container">
+    <!--span Animation letters-->
     <div class="nav-item word-container">
-
       <span class="word1">
-      </span>
-      <span class="letter" data-alt="true">H</span>
-        <span class="letter2">o</span>
-        <span class="letter" data-alt="true">m</span>
-        <span class="letter2">e</span>
+        <a href="index.html">
+          <span class="letter" data-alt="true">H</span>
+          <span class="letter2">o</span>
+          <span class="letter" data-alt="true">m</span>
+          <span class="letter2">e</span>
+        </a>
       </span>
     </div>
-    <!--other Nav Items-->
-    <div class="nav-item">Work</div>
-    <div class="nav-item">About</div>
-    <div class="nav-item">FAQ</div>
-
+    <div class="nav-item word-container">
+      <span class="word1">
+        <a href="index.html#projects-section">
+          <span class="letter" data-alt="true">W</span>
+          <span class="letter2">o</span>
+          <span class="letter" data-alt="true">r</span>
+          <span class="letter2">k</span>
+        </a>
+      </span>
+    </div>
+    <div class="nav-item word-container">
+      <span class="word1">
+        <a href="about.html">
+          <span class="letter" data-alt="true">A</span>
+          <span class="letter2">b</span>
+          <span class="letter" data-alt="true">o</span>
+          <span class="letter2">u</span>
+          <span class="letter" data-alt="true">t</span>
+        </a>
+      </span>
+    </div>
+    <div class="nav-item word-container">
+      <span class="word1">
+        <a href="index.html#footer">
+          <span class="letter" data-alt="true">C</span>
+          <span class="letter2">o</span>
+          <span class="letter" data-alt="true">n</span>
+          <span class="letter2">t</span>
+          <span class="letter" data-alt="true">a</span>
+          <span class="letter2">c</span>
+          <span class="letter" data-alt="true">t</span>
+        </a>
+      </span>
+    </div>
   </div>
 
   <!--main Image-->
   <div class="image-container">
-  <img class="main-picture" src="pictures/main.picture.cropped.jpg">
+    <img class="main-picture" src="Pictures/pexels-blaque-x-264516-932638.jpg" alt="Main Image">
+  </div>
+
+  <!-- Bubbles oben -->
+  <div class="floating-circles">
+    <div class="floating-circle"></div>
+    <div class="floating-circle"></div>
+    <!-- Weitere Bubbles -->
   </div>
 
   <!--Welcometext+button-->
   <div class="text-wrapper">
-    <h1>Hi I'm <br><span class="Ronja">RONJA</span><br></h1>
-    <p>I am currently studying Interfacedesign at FH Potsdam. <br> Join me on my journey! </p>
-    <div>
-      <button class="Checkout-button">Get in touch!</button>
-    </div>
+    <h1><br><span class="Ronja">Ronja Wolf</span><br></h1>
+    <div></div>
   </div>
 
-  <!-- weiterer Inhalt -->
-<div class="more-content">
-  <h2>Projects</h2>
-  <p>Here are some of my projects bla bla bla bla bla bla bla </p>
-  <p>More text more text more text </p>
-  <div image-container2>
-  <img class="image-child" src="Pictures/" alt="example photo" />
-</div>
-</div>
+  <div class="blue-banner">
+    <p>
+      <span class="welcometomyportfolio">Willkommen!</span><br><br>
+      Ich bin Ronja und studiere momentan Interface Design in Potsdam. Hier findest du eine Zusammenstellung meiner Projekte. <br>
+      Viel Spaß!
+    </p>
+  </div>
 
+  <div id="projects-section"></div>
+  <div class="work-section">
+    <h2>Projekte</h2>
+    <div class="gallery">
+      <div class="gallery-item">
+        <a href="dreamscape.html">
+          <img src="Pictures/dreamscape/dreamscapefoto2.png" alt="Project 1">
+        </a>
+        <p>Dreamscape</p>
+      </div>
+      <div class="gallery-item">
+        <a href="headachehelper.html">
+          <img src="Pictures/headachehelper/headachehelper2.png" alt="Project 1">
+        </a>
+        <p>Headache-helper</p>
+      </div>
+    </div>
+  </div>
 
   <!-- GSAP -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="script.js"></script>
 </body>
+
+<footer class="footer">
+  <div id="footer"></div>
+  <div class="footer-content">
+    <div class="contact-info">
+      <h3>Kontaktiere mich</h3>
+      <p>Email: Ronja.wolf@fh-potsdam.de</p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/deinprofil" target="_blank">linkedin.com/in/deinprofil</a></p>
+      <p>GitHub: <a href="https://github.com/deinprofil" target="_blank">github.com/deinprofil</a></p>
+    </div>
+  </div>
+</footer>
 </html>
