--- a/index.html
+++ b/index.html
@@ -97,11 +97,13 @@
   </div>
 
   <div class="blue-banner">
-    <p>
-      <span class="welcometomyportfolio">Willkommen!</span><br><br>
-      Ich bin Ronja und studiere momentan Interface Design in Potsdam. Hier findest du eine Zusammenstellung meiner Projekte. <br>
+    <div class="welcome-txt">
+      <h3 class="welcometomyportfolio">Willkommen</h3>
+      <p>Ich bin Ronja und studiere momentan Interface Design in Potsdam. Hier findest du eine Zusammenstellung meiner Projekte. <br>
       Viel Spaß!
-    </p>
+      </p>
+    </div>
+    
   </div>
 
   <div id="projects-section"></div>
