--- a/headachehelper.html
+++ b/headachehelper.html
@@ -217,21 +217,25 @@
     
 
 
-
-
     /* Breakpoint Mobile */
 @media screen and (max-width: 768px) {
   .content-wrapper {
         flex-direction: column;
         gap: 20px; /* Weniger Abstand für kleinere Bildschirme */
   }
+  
   .gallery {
         grid-template-columns: repeat(auto-fill, minmax(220px, 1fr)); /* Etwas kleinere Bilder für mittlere Bildschirmgrößen */
       }
 
   .project-info {
       font-size: 0.7em;
-      
+    }
+
+    /*Projektfoto*/
+    .project-header {
+      width: 100%;
+      height: 40vh; /* 50% der Höhe des Viewports */
     }
 
 }
