--- a/about.html
+++ b/about.html
@@ -23,11 +23,11 @@
 body {
     margin: 0;
     font-family: 'Karla', sans-serif;
-    background-color: #ffffff; /* Weißer Hintergrund */
-    color: #000000; /* Schwarzer Text */
+    background-color: #ffffff; 
+    color: #000000; 
     line-height: 1.6;
     height: auto;
-    padding: 0 20px; /* Allgemeiner Abstand zum Bildschirmrand */
+    padding: 0 20px; 
 }
 
 h1 {
@@ -41,21 +41,21 @@ h1 {
   flex-direction: row;
   padding-top: 100px;
   align-items: flex-start;
-  gap: 50px; /* Größerer Abstand zwischen Bild und Text */
+  gap: 50px; 
 }
 
 .about-photo {
-  max-width: 30%; /* Kleinere maximale Breite des Bildes */
+  max-width: 30%; 
 }
 
 .about-photo img {
-  width: 100%; /* Bild nimmt die volle Breite des Containers ein */
-  height: auto; /* Verhindert Verzerrungen des Bildes */
-  object-fit: contain; /* Das Bild bleibt vollständig sichtbar und wird nicht abgeschnitten */
+  width: 100%; 
+  height: auto; 
+  object-fit: contain; 
 }
 
 .about-text {
-  max-width: 65%; /* Textcontainer etwas breiter gemacht */
+  max-width: 65%; 
   flex: 1;
 }
 
@@ -98,21 +98,21 @@ h1 {
 /* Breakpoint Mobile */
 @media screen and (max-width: 768px) {
   body {
-    padding: 20px; /* Allgemeiner Abstand auch auf kleineren Geräten */
+    padding: 20px; 
   }
 
   .about-content {
-    flex-direction: column; /* Stellt Bild und Text übereinander */
+    flex-direction: column; 
     align-items: center;
-    gap: 20px; /* Weniger Abstand zwischen Bild und Text auf kleinen Bildschirmen */
+    gap: 20px; 
   }
 
   .about-photo {
-    max-width: 70%; /* Bild bleibt kleiner auf kleinen Bildschirmen */
+    max-width: 70%; 
   }
 
   .about-text {
-    max-width: 100%; /* Text nimmt die volle Breite ein */
+    max-width: 100%; 
     text-align: center;
   }
 
@@ -138,7 +138,7 @@ h1 {
   <div class="nav-container">
     <!--span Animation letters-->
     <div class="nav-item word-container">
-      <a href="index.html" class="word1"> <!-- Hier wird auf die Homepage verlinkt -->
+      <a href="index.html" class="word1"> <!--auf die Homepage verlinkt -->
         <span class="letter" data-alt="true">H</span>
         <span class="letter2">o</span>
         <span class="letter" data-alt="true">m</span>
